# asusrouter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py
.github/: FUNDING.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  device_support.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  notify-from-dev.yml  release-drafter.yml  release.yml
asusrouter/: __init__.py  __main__.py  asusrouter.py  config.py  connection.py  connection_config.py  const.py  dataclass.py  error.py  helpers.py  registry.py
asusrouter/modules/: __init__.py  access_point.py  aimesh.py  attributes.py  aura.py  client.py  color.py  connection.py  const.py  data.py  data_finder.py  data_transform.py  ddns.py  device.py  firmware.py  flags.py  homeassistant.py  identity.py  ip_address.py  led.py  openvpn.py  parental_control.py  port_forwarding.py  ports.py  service.py  source.py  state.py  system.py  traffic.py  vendor.py  vpnc.py  wireguard.py  wlan.py
asusrouter/modules/endpoint/: __init__.py  aura.py  command.py  devicemap.py  devicemap_const.py  error.py  ethernet_ports.py  firmware.py  firmware_note.py  firmware_note_aimesh.py  hook.py  hook_const.py  network.py  networkmapd.py  onboarding.py  port_status.py  rgb.py  state.py  sysinfo.py  temperature.py  traffic_backhaul.py  traffic_ethernet.py  traffic_wifi.py  update_clients.py  vpn.py  vpn_const.py  wan.py
asusrouter/tools/: __init__.py  cleaners.py  connection.py  converters.py  dump.py  enum.py  identifiers.py  legacy.py  logger.py  masking.py  readers.py  security.py  types.py  units.py  writers.py
asusrouter/util/: __init__.py  calculators.py  communication.py  compilers.py  converters.py  parsers.py  process.py
asusrouter_mcp/: .env.example  README.md  __init__.py  mcp_config_example.json  server.py
asusrouter_mcp/examples/: README.md  interactive_test.py  test_logger.py  test_mcp_with_logging.py
tests/: __init__.py  conftest.py  helpers.py  test_asusrouter_00_common.py  test_asusrouter_02_get_data.py  test_asusrouter_99_properties.py  test_config.py  test_config_instance.py  test_connection.py  test_connection_01_init.py  test_connection_02_connect.py  test_connection_03_request.py  test_connection_04_fallback.py  test_connection_05_make_request.py  test_connection_06_logging.py  test_connection_make_request.py  test_connection_request.py  test_devices.py  test_mcp_server.py  test_registry.py
tests/modules/: __init__.py  test_access_point.py  test_aura.py  test_client.py  test_color.py  test_connection.py  test_ddns.py  test_device.py  test_firmware.py  test_led.py  test_openvpn.py  test_parental_control.py  test_port_forwarding.py  test_service.py  test_source.py  test_state.py  test_system.py  test_traffic.py  test_vpnc.py  test_wireguard.py  test_wlan.py
tests/modules/endpoint/: __init__.py  _test_default.py  test_aura.py  test_command.py  test_devicemap.py  test_endpoint.py  test_error.py  test_firmware.py  test_hook.py  test_network.py  test_onboarding.py  test_port_status.py  test_temperature.py
tests/test_data/: __init__.py
tests/test_data/gt_ax11000pro_stock_388/: __init__.py  network_001.content  network_001.py  network_002.content  network_002.py  network_003.content  network_003.py
tests/test_data/map_ac1300_stock_386/: __init__.py  hook_001.content  hook_001.py
tests/test_data/rt_ax88u_merlin_388/: __init__.py  devicemap_001.content  devicemap_001.py  ethernet_ports_001.content  ethernet_ports_001.py  firmware_001.content  firmware_001.py  hook_001.content  hook_001.py  hook_002.content  hook_002.py  hook_003.content  hook_003.py  hook_004.content  hook_004.py  hook_005.content  hook_005.py  hook_006.content  hook_006.py  hook_007.content  hook_007.py  onboarding_001.content  onboarding_001.py  onboarding_002.content  onboarding_002.py  port_status_001.content  port_status_001.py  sysinfo_001.content  sysinfo_001.py  temperature_001.content  temperature_001.py  update_clients_001.content  update_clients_001.py  vpn_001.content  vpn_001.py
tests/test_data/rt_ax88u_merlin_388_7/: __init__.py  sysinfo_001.content  sysinfo_001.py
tests/tools/: __init__.py  test_cleaners.py  test_connection.py  test_converters.py  test_enum.py  test_enum_unknown.py  test_identifiers.py  test_masking.py  test_readers.py  test_security.py  test_units.py  test_units_data.py  test_writers.py
tests/util/: __init__.py  test_calculators.py  test_converters.py
tools/: __init__.py  bump_version.py
