[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "asusrouter"
version         = "1.12.2"
license         = {text = "Apache-2.0"}
requires-python = ">=3.11.0"
readme          = "README.md"
description     = "API wrapper for communication with ASUSWRT-powered routers using HTTP protocol"
authors         = [
    { name="Yevhenii Vaskivskyi", email="yevhenii@vaskivskyi.com" },
]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies    = [
    "aiohttp >=3.8.1",
    "python-dateutil ==2.8.2",
    "urllib3 >=1.26.14",
    "xmltodict >=0.12.0",
]

[project.urls]
"Source Code"   = "https://github.com/Vaskivskyi/asusrouter"
"Bug Reports"   = "https://github.com/Vaskivskyi/asusrouter/issues"

[tool.setuptools.packages.find]
include = ["asusrouter*"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
