[metadata]
name                            = asusrouter
version                         = 0.10.3
author                          = Yevhenii Vaskivskyi
author_email                    = yevhenii@vaskivskyi.com
license                         = Apache-2.0
description                     = API wrapper for communication with ASUSWRT-powered routers
long_description                = file: README.md
long_description_content_type   = text/markdown
url                             = https://github.com/Vaskivskyi/asusrouter
project_urls =
    Source Code     = https://github.com/Vaskivskyi/asusrouter
    Bug Reports     = https://github.com/Vaskivskyi/asusrouter/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.9.0
install_requires =
    aiohttp ==3.8.1
    python-dateutil ==2.8.2
    urllib3 ==1.26.8
    xmltodict ==0.12.0

[options.packages.find]
include = asusrouter*
